<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262C3A"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#191D26"
        android:contentDescription="@string/toolbarlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:background="#191D26"
            android:contentDescription="@string/back_arrow_image"
            android:src="@drawable/ic_back_arrow"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:background="#191D26"
            android:contentDescription="@string/searchimage"
            android:src="@drawable/ic_search_image"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            app:searchIcon="@null"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginStart="20dp"
            android:textColor="#524E51"
            android:textSize="14sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>